# Yet-Another-Wireguard-Gui

./: .gitignore  CMakeLists.txt  README.md  yawg.spec
daemon/: CMakeLists.txt  WireguardManager.cpp  WireguardManager.h  WireguardTypes.h  com.example.wireguard.rules  io.github.traciges.WireguardManager.conf  io.github.traciges.WireguardManager.xml  io.github.traciges.wireguard.policy  io.github.traciges.wireguard.rules  main.cpp  org.example.WireguardManager.conf  org.example.WireguardManager.xml  yawg-daemon.service
gui/: CMakeLists.txt  Main.qml  SettingsManager.cpp  SettingsManager.h  WireguardManagerBridge.cpp  WireguardManagerBridge.h  main.cpp  yawg-gui.desktop
gui/qml/: AddProfileDialog.qml  DeleteProfileDialog.qml  Main.qml  ProfileCard.qml  RenameProfileDialog.qml  SettingsDialog.qml
packaging/: 50-yawg-daemon.preset
shared/: WireguardTypes.h  io.github.traciges.WireguardManager.xml
